[gd_scene load_steps=12 format=3 uid="uid://b81n620de3ncs"]

[ext_resource type="Script" path="res://scenes/player/Player.gd" id="1_81fon"]
[ext_resource type="Script" path="res://scenes/player/STATES.gd" id="2_1ut3a"]
[ext_resource type="Script" path="res://scenes/player/UpgradesButton.gd" id="2_4pxmn"]
[ext_resource type="PackedScene" uid="uid://hcirfobbjqtv" path="res://scenes/player/FALL.tscn" id="2_0184v"]
[ext_resource type="PackedScene" uid="uid://yfxuieq0x1t0" path="res://scenes/player/IDLE.tscn" id="3_nv7tb"]
[ext_resource type="PackedScene" uid="uid://cif3fftw7iyl2" path="res://scenes/player/MOVE.tscn" id="4_w2j18"]
[ext_resource type="PackedScene" uid="uid://d0q16owpcrqo" path="res://scenes/player/JUMP.tscn" id="5_f23lx"]
[ext_resource type="PackedScene" uid="uid://cmknjy5pk8737" path="res://scenes/player/CLIMB.tscn" id="6_sthl4"]
[ext_resource type="PackedScene" uid="uid://dhqbpbqap5a6b" path="res://scenes/player/DOWN.tscn" id="7_6g2yb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqnm8"]
size = Vector2(20, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_37dgx"]
size = Vector2(22, 42)

[node name="Player" type="CharacterBody2D" groups=["Climber"]]
script = ExtResource("1_81fon")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_aqnm8")

[node name="Camera2D" type="Camera2D" parent="."]
process_callback = 0
position_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
offset_right = 160.0
offset_bottom = 27.0
show_percentage = false

[node name="UpgradesButton" type="Button" parent="CanvasLayer"]
offset_left = 931.0
offset_right = 1153.0
offset_bottom = 31.0
text = "upgrades"
script = ExtResource("2_4pxmn")

[node name="StepCheckRays" type="Node2D" parent="."]

[node name="stepforward" type="RayCast2D" parent="StepCheckRays"]
unique_name_in_owner = true
position = Vector2(19, -44)
target_position = Vector2(0, 44)

[node name="bottom" type="RayCast2D" parent="StepCheckRays"]
unique_name_in_owner = true
target_position = Vector2(0, 24)

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_37dgx")

[node name="STATES" type="Node" parent="."]
script = ExtResource("2_1ut3a")

[node name="FALL" parent="STATES" instance=ExtResource("2_0184v")]

[node name="IDLE" parent="STATES" instance=ExtResource("3_nv7tb")]

[node name="MOVE" parent="STATES" instance=ExtResource("4_w2j18")]

[node name="JUMP" parent="STATES" instance=ExtResource("5_f23lx")]

[node name="CLIMB" parent="STATES" instance=ExtResource("6_sthl4")]

[node name="DOWN" parent="STATES" instance=ExtResource("7_6g2yb")]

[node name="Arm" type="Node2D" parent="."]
position = Vector2(0, -26)

[node name="ColorRect" type="ColorRect" parent="Arm"]
offset_top = -3.0
offset_right = 21.0
offset_bottom = 4.0
color = Color(0, 0, 0, 1)

[node name="Marker2D" type="Marker2D" parent="Arm"]
position = Vector2(17, 0)

[connection signal="pressed" from="CanvasLayer/UpgradesButton" to="." method="_on_upgrades_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UpgradesButton" to="CanvasLayer/UpgradesButton" method="_on_pressed"]
